<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">amiCO</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_in_navigation">Add in navigation</string>
    <string name="add_in_net">Add in net</string>
    <string name="add_in_fun">Add in fun</string>
    <string name="add_in_menu">Add in menu</string>
    <string name="remove_from_menu">Remove from menu</string>
    <string name="delete_from_system">Delete from system</string>
    <string name="autorun_settings">Auto run settings</string>
    <string name="remove">Remove</string>
    <string name="remove_msg">Are you really remove want it?</string>
    <string name="sliding_left">Sliding left</string>
    <string name="sliding_right">Sliding right</string> 
    <string name="autorun">Power on auto run</string>
    <string name="help">Help</string>
    <string name="company">Company</string>
    <string name="company_name">bion-car.com</string>
    <string name="android_ver">Android Version</string>
    <string name="fw_ver">FW Version</string>
    <string name="customer_ver">Customer Version</string>
    <string name="open_apk_manager">Open APK Manager</string>
    <string name="initializing">Initializing...</string>
    <string name="status_bar_height_pre">11</string>
    <string name="yes">YES/OK</string>

</resources>
